Added some formating and moved case to subpage

--- a/index.html
+++ b/index.html
@@ -2,34 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="style.css" rel="stylesheet">
-    <title>Test</title>
-    <script src="Oyezfetch.js" ></script>
-
+    <title>Title</title>
 </head>
 <body>
-    <div id="title" class="title">
-        <a id="name" target="_blank"></a>
-        <span id="year" class="year"></span>
-    </div>
-    <h1>Facts of The Case</h1>
-    <div id="facts" class="facts"></div>
-    <h1>Question</h1>
-    <div id ="question" class="question"></div>
-    <h1> Conclusion</h1>
-    <div id="conclusion" class="conclusion"></div>
-    <h1>Rulings</h1>
-    <div>
-        <span id="majority" class="majority"></span>
-        <span id="minority" class="minority"></span>
-        <span id="no-vote" class="no-vote"></span>
 
-    </div>
-    <div id="dissenting" class="dissenting"></div>
-    <button class="new_case" onclick="displayRandomCase()">New Case</button>
-
-
-
-
+<a href="case.html">View Random Case</a>
 </body>
 </html>
