--- a/game.html
+++ b/game.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Game</title>
+<script src="Oyezfetch.js"></script>
 </head>
+
 <body>
 
-<a href="case.html">View Random Case</a>
-<a href="game.html">Game</a>
 </body>
 </html>
