Added Dragable boxes

--- a/case.html
+++ b/case.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="case.css" rel="stylesheet">
+    <link href="randomcase/case.css" rel="stylesheet">
     <title>Case Data</title>
     <script src="Oyezfetch.js"></script>
-    <script src="Oyezdisplay.js"></script>
+    <script src="randomcase/Oyezdisplay.js"></script>
     <script>
         const params = new URLSearchParams(window.location.search);
         const term = params.get("term");
