--- a/game.html
+++ b/game.html
@@ -3,10 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>Game</title>
-<script src="Oyezfetch.js"></script>
+    <script src="Oyezfetch.js"></script>
+
+    <link href="game/game.css" rel="stylesheet">
+
 </head>
 
 <body>
+
+<div id="case-container">
+    <div id="case1" class="case">
+        <div id="case1header" class="case-header">Board of Education of Kiryas Joel Village School District v. Grumet</div>
+        <div id="case1text" class="case-text">
+            <p>Did the 1989 statute violate the First Amendment's Establishment?</p>
+        </div>
+    </div>
+    <div id="case2" class="case" style="left: 200px">
+        <div id="case2header" class="case-header">Chevron U.S.A., Inc. v. Echazabal</div>
+        <div id="case2text" class="case-text">
+            <p>Does the Americans with Disabilities Act of 1990 permit the Equal Employment Opportunity Commission's regulation that allows the defense that a worker's disability on the job would pose a direct threat to his health?</p>
+        </div>
+    </div>
+    <div id="case3" class="case" style="left: 400px">
+        <div id="case3header" class="case-header">Freytag v. Commissioner</div>
+        <div id="case3text" class="case-text">
+            <p>Does 26 U.S.C. 7443A(a) permit the assignment of particularly complex cases dealing with large amounts of money to "special trial judges" appointed by the Chief Judge of the U.S. Tax Court, provided that the special trial judges do not enter the decision but simply prepare an opinion for review and adoption by a regular Tax Court judge? Under the Appointments Clause of Article II Section 2, may Congress permit the Chief Judge of the U.S. Tax Court to appoint "special trial judges" to "any other proceeding which the chief judge may designate"?</p>
+        </div>
+    </div>
+    <div id="case4" class="case" style="left: 600px">
+        <div id="case4header" class="case-header">Republic of Philippines v. Pimentel</div>
+        <div id="case4text" class="case-text">
+            <p>Did the U.S. Court of Appeals for the Ninth Circuit err in approving the award of assets to creditors of former Philippine President Ferdinand Marcos when the Philippine government, claiming rightful ownership of the assets, excluded itself from the proceedings based on sovereign immunity?</p>
+        </div>
+    </div>
+    <div id="case5" class="case" style="left: 800px">
+        <div id="case5header" class="case-header">Palazzolo v. Rhode Island</div>
+        <div id="case5text" class="case-text">
+            <p>May a property owner who acquired title to the property after it was subject to wetlands regulations still bring a takings claim under the Fifth Amendment?</p>
+        </div>
+    </div>
+    <script src="game/Draggable.js"></script>
+
+
+</div>
+
 
 </body>
 </html>
